# framebuffer-browser

./: CMakeLists.txt  README.md  browserwindow.cpp  browserwindow.h  build_debian_packages  config.h.in  config.json  downloadwidget.ui  fbrowser  main.cpp  mainwindow.cpp  mainwindow.h  promo.md  run-eglfs  run-fb  start-fbbrowser.sh  tabwidget.cpp
debian/: README.md
debian/bookworm/: fbrowser-bin-kiosk_1.0.0_amd64.deb  fbrowser-bin-kiosk_1.0.0_i386.deb  fbrowser-bin_1.0.0_amd64.deb  fbrowser-bin_1.0.0_i386.deb
debian/bullseye/: fbrowser-bin-kiosk_1.0.0_amd64.deb  fbrowser-bin-kiosk_1.0.0_i386.deb  fbrowser-bin_1.0.0_amd64.deb  fbrowser-bin_1.0.0_i386.deb
scripts/: fb_blank.sh  static.sh
tools/: capture  fb_blank
